Fixes overflow on rotating words

--- a/styles.css
+++ b/styles.css
@@ -169,11 +169,14 @@ footer li {
 .rw-wrapper{
   font-size: 1.2em
   position: relative;
-  margin: 110px auto 0 40px;
+  margin: 110px auto 0 20px;
   font-family: 'Rokkitt';
   padding: 10px;
   display:inline-block;
   background-color: rgba(255, 255, 255, .75);
+  width: 340px;
+  word-wrap: normal;
+  border-radius: 5px;
 }
 
 
@@ -183,27 +186,29 @@ footer li {
   text-align: left;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
 
+
 }
 
 .rw-sentence span{
   color: #444;
-  white-space: nowrap;
+  
   font-size: 200%;
   font-weight: normal;
+
 }
 
 
 .rw-words{
   display: inline;
   text-indent: 1em;
+
 }
 
 .rw-words span{
   position: absolute;
   opacity: 0;
-  overflow: hidden;
-  width: 100%;
   color: #6b969d;
+ 
 }
 
 
@@ -215,6 +220,7 @@ footer li {
   overflow: hidden;
   width: 100%;
   color: #6b969d;
+
 }
 
 .rw-words-1 span{
@@ -307,6 +313,7 @@ footer li {
     padding: 10px;
     display:inline-block;
     background-color: rgba(255, 255, 255, .75);
+    width: 400px;
   }
 }
 
@@ -328,5 +335,9 @@ footer li {
     -moz-column-count: 3;
     -webkit-column-count: 3;
     column-count: 3;
+  }
+
+  .rw-wrapper{
+    width: 400px;
   }
 }
